--- a/about.html
+++ b/about.html
@@ -221,7 +221,7 @@
 
                         A EXCELÊNCIA NO ATENDIMENTO aos nossos pacientes é a nossa imagem de marca. <br>
                         A FORMAÇÃO CONTINUADA dos nossos PROFISSIONAIS DE SAÚDE é imprescindível. <br>
-                        A transmissão de INFORMAÇÃO CIENTISTA DE QUALIDADE baseada nos estudos mais atuais é o
+                        A transmissão de INFORMAÇÃO CIENTÍFICA DE QUALIDADE baseada nos estudos mais atuais é o
                         nosso compromisso. <br><br>
                         A Clínica segue as GUIDELINES INTERNACIONAIS internacionais validadas pelas entidades
                         responsáveis e
