--- a/index.html
+++ b/index.html
@@ -223,27 +223,34 @@
                         <div class="row">
                             <!-- Banner 1 -->
                             <div class="col banner-1" style="background-image: url('img/curso.jpg');">
-                                <div class="banner-text subtitle">
-                                    Curso de Preparação para o Parto e Parentalidade: pensado para si!
-                                </div>
-                                <button class="banner-btn">Saiba mais</button>
+                                <a href="pages/curso-amamentacao-indiv.html">
+                                    <div class="banner-text subtitle">
+                                        Curso de Preparação para o Parto.
+                                    </div>
+                                    <button class="banner-btn">Saiba mais</button>
+                                </a>
                             </div>
                             <div class="col">
                                 <!-- Banner 2 -->
                                 <div class="row banner-2"
                                     style="background-image: url('https://img.freepik.com/free-photo/closeup-pediatrician-preparing-vaccine-child_637285-10527.jpg?t=st=1733482817~exp=1733486417~hmac=341135d4c3fe6fcb68149cb1a199b408293e3061960053bffbda6e5d9b424e08&w=826');">
-                                    <div class="banner-text subtitle">
-                                        Planos de Vacinação adaptados ao seu país de origem.
-                                    </div>
-                                    <button class="banner-btn">Saiba mais</button>
+                                    <a href="pages/vacina.html">
+                                        <div class="banner-text subtitle">
+                                            Planos de Vacinação adaptados ao seu país de origem.
+                                        </div>
+                                        <button class="banner-btn">Saiba mais</button>
+                                    </a>
                                 </div>
 
                                 <!-- Banner 3 -->
                                 <div class="row banner-2" style="background-image: url('img/terapia-snoezelen.jpg');">
-                                    <div class="banner-text subtitle">
-                                        Sala Snoezelen: a única sala multissensorial em Moçambique!
-                                    </div>
-                                    <button class="banner-btn">Saiba mais</button>
+
+                                    <a href="pages/terapia.html#E">
+                                        <div class="banner-text subtitle">
+                                            Sala Snoezelen: a única sala multissensorial em Moçambique!
+                                        </div>
+                                        <button class="banner-btn">Saiba mais</button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -263,7 +270,7 @@
                     <div class="hero__text">
                         <!-- <span>Bem-vindo à A Clínica</span> -->
                         <h2>Somos a aldeia <br>da SUA família</h2>
-                        <a href="#" class="primary-btn normal-btn">Saiba Mais</a>
+                        <a href="about.html" class="primary-btn normal-btn">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -392,7 +399,7 @@
                                     <i class="fa fa-quote-left"></i>
                                 </div>
                                 <div class="testimonial__author__text">
-                                    <h5>Fátima Albasin</h5>
+                                    <h5>Fátima Albasini</h5>
                                     <span>Mãe</span>
                                 </div>
                             </div>
@@ -427,11 +434,13 @@
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                             </div>
-                            <p>We are incredibly lucky to have Dr Ines! We live quite remotely and she has been able to
+                            <p class="textoporExpandir">We are incredibly lucky to have Dr Ines! We live quite remotely
+                                and she has been able to
                                 provide us with incredibly high
                                 quality care remotely and when we visit her clinic in Maputo. She is wonderfully
                                 supportive, very fast to respond, gives
                                 excellent advice and is extremely kind and caring. We are so grateful for her help! </p>
+                            <button class="mais">ver mais</button>
                         </div>
                     </div>
                     <div class="col-lg-6">
