--- a/team.html
+++ b/team.html
@@ -343,7 +343,7 @@
                                         </div>
                                         <div class="team-content d-grid justify-items-center justify-content-center">
                                             <h4 class="mb-2">Dra. Patricia P. Ronquillo</h4>
-                                            <p>Médica Geral </p>
+                                            <p>Técnicas de Intervenção médica no tratamento psíquico infanto-juvenil</p>
 
                                         </div>
                                     </a>
@@ -357,7 +357,7 @@
                                         </div>
                                         <div class="team-content d-grid justify-items-center justify-content-center">
                                             <h4 class="mb-2">Tânia Semende</h4>
-                                            <p class="text-left">Saúde materno-infantil</p>
+                                            <p class="text-left">Enfermeira</p>
                                         </div>
                                     </a>
                                 </div>
