--- a/pages/team-sing.html
+++ b/pages/team-sing.html
@@ -28,7 +28,7 @@
 
     <style>
         .services__details__content {
-            background-image: url(../img/bg3.png);
+            background-image: none;
         }
 
         .name {
@@ -45,8 +45,6 @@
         }
 
         #icone {
-            width: 70px;
-            height: 85px;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: top center;
@@ -118,7 +116,7 @@
                 <div class="services__details__pic">
                     <img id="profile" alt="">
                     <div class="services__details__content">
-                        <div class="d-flex w-100 align-items-center">
+                        <div class="d-flex w-100 align-items-end">
                             <div class="mr-3">
                                 <div class="services__details__title">
                                     <h3><img id="icone" class="fa " alt="">
@@ -143,8 +141,6 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 class=" mb-2 subtitle fw-bolder">Apresentação
-                                        </h2>
                                         <p class="mb-4" id="paragrafo">
                                         </p>
                                         <h5 class="mt-4 h4 text-center" id="frase"></h5>
@@ -254,7 +250,7 @@
         // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
         function showA() {
             nome.textContent = "Calisto Chemane"; // Atualiza o texto para "Calisto Chemane"
-            icone.style.backgroundImage = "url('../img/icons/heart.png')";
+            icone.src = "../img/icons/heart.png";
             funcao.textContent = "Atendimento ao Paciente."; // Atualiza o texto
             paragrafo.innerHTML = "Estudante universitário no curso de Ciências de Informação Geográfica na Universidade Eduardo Mondlane em Maputo, Moçambique e formado em Atendimento ao Cliente pela Academia Negócios de Saúde, Portugal. <br><br> Com mais de 2 anos de experiência de atendimento ao paciente, orgulho-me de ter desenvolvido uma abordagem marcada pela simpatia, empatia, paciência e compreensão. Descobri uma verdadeira paixão por esta área de trabalho, transformando cada interação numa oportunidade de oferecer o meu melhor e criar conexões leais e genuínas, colocando sempre as necessidades dos pacientes em primeiro lugar.";
             frase.innerHTML = "<b><i>N’A Clínica</i> quero que te sintas em sempre casa, acolhido e cuidado como parte da nossa família!</b>";
@@ -267,7 +263,7 @@
         // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
         function showB() {
             nome.textContent = "Erika Pereira"; // Atualiza o texto para "Calisto Chemane"
-            icone.style.backgroundImage = "url('../img/icons/Nutrição-white.png')";
+            icone.src = "../img/icons/Nutrição-white.png";
             funcao.textContent = "Especialista Nutricionista "; // Atualiza o texto
             paragrafo.innerHTML = "Nutricionista clínica com mais de 10 anos de experiência a fazer atendimento presencial e online. Mestre em Ciências da Nutrição pela Universidade de Chester no Reino Unido, tem vindo a acrescentar ao seu currículo formações mais específicas na área da Nutrição. </br></br> Foi na sua jornada de maternidade que experienciou a introdução alimentar e que ganhou uma nova perspetiva sobre a vida no geral e sobre a educação alimentar em particular. </br></br>  Ensina os seus pacientes a alimentarem-se adequadamente e de forma personalizada para que implementem as recomendações com motivação, foco e consistência de modo a superarem todos os desafios que estes processos implicam e a alcançarem os resultados pretendidos.";
             frase.innerHTML = "<b>«A saúde é o melhor que a Nutrição tem para te oferecer!»</b>";
@@ -277,7 +273,7 @@
         // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
         function showC() {
             nome.textContent = "Dra. Inês Claudino"; // Atualiza o texto para "Calisto Chemane"
-            icone.style.backgroundImage = "url('../img/icons/pediatra .png')";
+            icone.src = "../img/icons/pediatra .png";
             paragrafo.innerHTML = "Mãe de uma menina fantástica e Pediatra com mais de 10 anos de experiência. Autora da página de Instagram sobre Pediatria e Parentalidade «Dona Bebé». </br></br> Licenciada em Medicina pela Universidade de Navarra em Espanha. Especialista em Pediatria e sub-especialista em Doenças Infetocontagiosas Pediátricas pelo Hospital La Paz em Madrid, Espanha. Estágio Imunoinfecciologia no Great Ormond Street Hospital for Children em Londres, Reino Unido. Estágio de Infecciologia Tropical no Hospital Central de Maputo. Especialista Universitária em Amamentação Materna pela Universidade Francisco de Vitoria em Madrid, Espanha. Certificada em Primeiros Socorros Pediátricos: atualização 2024 pela Moz First Aid. </br></br> Descobri a minha paixão profissional na atenção primária em Pediatria, onde posso acompanhar as crianças (e as suas famílias) desde a maternidade até à idade adulta. O aleitamento materno foi um dos temas que mais aprofundei nos últimos anos, segura de poder fazer a diferença numa área tão pouco trabalhada em Moçambique.";
             funcao.textContent = "Pediatra ";
             frase.innerHTML = "<b>«És SEMPRE a melhor MÃE do mundo para o teu bebé!»</b>";
@@ -288,9 +284,9 @@
         // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
         function showD() {
             nome.textContent = "Dra. Patricia Pérez Ronquillo"; // Atualiza o texto para "Calisto Chemane"
-            icone.style.backgroundImage = "url('../img/icons/medica geral.png')";
+            icone.src = "../img/icons/medica geral.png";
             paragrafo.innerHTML = "Médica Geral e a sua nova conselheira. Licenciada em Medicina na Universidade Carlos Juan Finlay em Cuba com menção de honra. Especialista Universitária em Pediatria, Diploma Universitário em Técnicas de Intervenção médica no tratamento psíquico infanto-juvenil e a realizar um Mestrado em Neonatologia pela Universidade Tecnológica Cardenal Herrera em Espanha.  Certificada em Primeiros Socorros Pediátricos: atualização 2024 pela Moz First Aid. </br></br> Toda a minha vida sonhei trabalhar com crianças e, agora que sou mãe de uma menina ainda dou mais valor à Pediatria e ao trabalho desenvolvido com as famílias. Descobri, também, a paixão pela amamentação materna, tema muito interessante do ponto de vista clínico e social.";
-            funcao.textContent = "Médica Geral  ";
+            funcao.textContent = "Técnicas de Intervenção médica no tratamento psíquico infanto-juvenil";
             frase.innerHTML = "<b>«Para amamentar é necessária uma rede de apoio forte. Quero que te sintas acompanhada nesta jornada!»</b>";
             profile.src = "../img/team/team-7.jpg";
             // Rolar para o topo suavemente
@@ -299,7 +295,7 @@
         function showE() {
             nome.textContent = "Katia Mabjaia"; // Atualiza o texto para "Calisto Chemane"
             funcao.textContent = "Atendimento ao Paciente.";
-            icone.style.backgroundImage = "url('../img/icons/heart.png')";
+            icone.src = "../img/icons/heart.png";
             paragrafo.innerHTML = "Estudante universitária de Engenharia de Gestão de Recursos Petrolíferos na Universidade Técnica de Moçambique. <br> Com mais de 1 ano de experiência em atendimento ao público em diversas empresas e no ramo da hotelaria, decidi enveredar pela área do atendimento ao paciente. <br> Sempre tive o sonho de comunicar e um especial interesse pela área de ajudar o próximo. Acredito que a chave para um excelente atendimento ao paciente passa por saber escutar e ter empatia aliada a um grande profissionalismo."
             frase.innerHTML = "<b>«Sorriso, empatia, escuta ativa e eficácia valem mais do que mil palavras.»</b>";
             profile.src = "../img/team/team-9.jpg";
@@ -309,7 +305,7 @@
         function showF() {
             nome.textContent = "Ana Lusete Matlabe"; // Atualiza o texto para "Calisto Chemane"
             funcao.textContent = "Contabilidade";
-            icone.style.backgroundImage = "url('../img/icons/contabilidade.png')";
+            icone.src = "../img/icons/contabilidade.png";
             paragrafo.innerHTML = "Técnica de Saúde Pública e Gestão Ambiental pelo Instituto Politécnico de Empreendedorismo e Tecnologia (IPET) desde 2017 e Educadora de Infância pelo Ministério da Mulher e Ação Social desde 2011. <br> No seu currículo conta com uma vasta experiência de trabalho para várias ONGs como os Médicos Sem Fronteiras (MSF). <br> Apaixonada pela educação infantil inclusiva, teve a oportunidade de trabalhar em escolas para crianças com necessidades educativas especiais. <br> Percebendo a estigmatização de pessoas com doenças como o HIV e tuberculose, fundou grupos de apoio para pacientes e famílias, de forma informar e reforçar a importância do tratamento destes doentes. <br> Com uma mente inquisitiva, iniciou a sua formação em Contabilidade, entendendo que seria uma mais-valia na hora de procurar novas oportunidades de trabalho."
             frase.innerHTML = "<b>«Cuidar da tua saúde é uma prioridade para mim!»</b>";
             profile.src = "../img/team/team-10.jpg";
@@ -319,7 +315,7 @@
         function showG() {
             nome.textContent = "Elsa Manjate"; // Atualiza o texto para "Calisto Chemane"
             funcao.textContent = "Tecnica de vacinação";
-            icone.style.backgroundImage = "url('../img/icons/medica geral.png')";
+            icone.src = "../img/icons/medica geral.png";
             paragrafo.innerHTML = "Agente de Medicina Preventiva pelo Centro de Saúde de Inhambane em 2005. Técnica de Medicina Preventiva pelo Instituto de Ciências de Saúde de Maputo desde 2014 com especialização na área de vacinação. <br> Escolhi esta área a partir da indicação de uma amiga de infância que já trabalhava na mesma e acabei por me apaixonar pela vacinação."
             frase.innerHTML = "<b>«A vacinação é a melhor forma de prevenção de doenças infeciosas!»</b>";
             profile.src = "../img/team/team-13.jpg";
@@ -329,7 +325,7 @@
         function showH() {
             nome.textContent = "Dra Joana Costa"; // Atualiza o texto para "Calisto Chemane"
             funcao.textContent = "Psicóloga Clínica";
-            icone.style.backgroundImage = "url('../img/icons/Pscologa.png')";
+            icone.src = "../img/icons/Pscologa.png";
             paragrafo.innerHTML = "Sou Psicóloga Clínica de formação, apaixonada pela mente humana em todas as suas facetas.  <br> Moçambicana e mãe de dois filhos lindos, desenvolvi um interesse especial pela intervenção psicológica na área materna, onde procuro contribuir para o bem-estar emocional e saúde mental das famílias num dos momentos mais marcantes das suas vidas. A Psicologia está presente em tudo o que faço, procuro aplicar este conhecimento para criar impacto positivo em todas as áreas da minha vida. Acredito que o acompanhamento psicológico pode ser transformador, promovendo uma vida mais equilibrada e saudável."
             frase.innerHTML = "<b>«A tua história é importante! Mereces atenção, amor, compreensão e bem-estar emocional. Estou aqui para ajudar-te enquanto percorres o teu caminho. »</b>";
             profile.src = "../img/team/team-11.jpg";
@@ -339,8 +335,7 @@
         function showI() {
             nome.textContent = "Dra Marina Pastore"; // Atualiza o texto para "Calisto Chemane"
             funcao.textContent = "Terapeuta Ocupacional";
-            icone.style.backgroundImage = "url('../img/icons/medica geral.png')";
-
+            icone.src = "../img/icons/medica geral.png";
             paragrafo.innerHTML = "Licenciada em Terapia Ocupacional pela Universidade de São Paulo (USP), Brasil. PhD e Mestra em Terapia Ocupacional pela Universidade Federal de São Carlos (UFSCar), Brasil. Especialização na Universidade do Porto em Psicologia Social e Ciências da Educação (UP), Portugal. Doutora em Antropologia da Criança, Brasil. <br> Mãe de um menino muito fofo e pequenino, e terapeuta ocupacional com mais de 12 anos de experiência em Moçambique. Autora do blog <i>“ser estrangeiromulungu”</i>, no qual relata as vivências e experiências com crianças e adolescentes em suas pesquisas de campo do Rovuma a Maputo. Autora também do livro “Brincar-brinquedo, criar-fazendo: entrelaçando pluriversos de infâncias e crianças ao sul de Moçambique”."
             frase.innerHTML = "<b>«Ser Terapeuta Ocupacional é experenciar meu lado mais humano e afetuoso e, agora como mãe recente, é também dar a oportunidade de diversas formas de vida, em seus diferentes jeitos de ser, poderem habitar esse mundo e participar daquilo que temos de melhor: a vida.»</b>";
             profile.src = "../img/team/team-15.jpg";
@@ -350,10 +345,9 @@
         }
         function showJ() {
             nome.textContent = "Tânia Semende"; // Atualiza o texto para "Calisto Chemane"
-            funcao.textContent = "Enfermeira especialista saúde materno-infantil";
-            icone.style.backgroundImage = "url('../img/icons/medica geral.png')";
-
-            paragrafo.innerHTML = "Enfermeira especialista saúde materno-infantil desde 2019 pela Universidade de Lugenda. <br> A sua mãe faleceu de cancro do colo do útero, o que a levou a querer estudar enfermagem de forma a perceber as origens daquela doença e como poderia ajudar na luta contra esta doença terrível. <br> Durante o curso universitário de enfermagem apaixonou-se pelo atendimento às mães e crianças. O seu maior sonho é continuar a cuidar de crianças, apoiar e ajudar mães com toda a sua dedicação."
+            funcao.textContent = "Enfermeira especialista em saúde materno-infantil";
+            icone.src = "../img/icons/medica geral.png";
+            paragrafo.innerHTML = "Enfermeira especialista em saúde materno-infantil desde 2019 pela Universidade de Lugenda. <br> A sua mãe faleceu de cancro do colo do útero, o que a levou a querer estudar enfermagem de forma a perceber as origens daquela doença e como poderia ajudar na luta contra esta doença terrível. <br> Durante o curso universitário de enfermagem apaixonou-se pelo atendimento às mães e crianças. O seu maior sonho é continuar a cuidar de crianças, apoiar e ajudar mães com toda a sua dedicação."
             frase.innerHTML = "<b>«A Enfermagem é uma profissão de amor e de dádiva aos demais!»</b>";
             profile.src = "../img/team/team-12.jpg";
 
@@ -363,7 +357,7 @@
         function showK() {
             nome.textContent = "Dulce Covane"; // Atualiza o texto para "Calisto Chemane"
             funcao.textContent = "Higienização";
-            icone.style.backgroundImage = "url('../img/icons/Esterizacao.png')";
+            icone.src = "../img/icons/Esterizacao.png";
 
             paragrafo.innerHTML = "Jovem dinâmica e focada no futuro profissional, começa o seu percurso laboral n’<i>A Clínica.</i> <br> Sempre teve o sonho de tirar um curso universitário de Enfermagem ou Contabilidade e conseguir ser uma pessoa independente. <br> Com esta oportunidade de trabalho pretende poupar dinheiro e conseguir entrar na faculdade no próximo ano.";
             frase.innerHTML = "<b>«Trabalho com afinco para poder deixar A Clínica impecável para receber os nossos pacientes.»</b>";
@@ -375,10 +369,9 @@
         function showL() {
             nome.textContent = "André Antunes"; // Atualiza o texto para "Calisto Chemane"
             funcao.textContent = "Personal Trainer";
-            icone.style.backgroundImage = "url('../img/icons/Exercício Fisico.png')";
-
+            icone.src = "../img/icons/Exercício Fisico.png";
             paragrafo.innerHTML = "Com mais de 15 anos de experiência em Moçambique, Portugal e além-fronteiras, é um Personal Trainer pronto para elevar os seus treinos a novos patamares! <br> As suas certificações e especializações abrangem desde treino de força e condicionamento físico, treino específico para gestantes e pós-parto, população sénior, recomposição corporal, pós-lesão e atletas. <br> Descubra as inúmeras possibilidades do treino personalizado online e melhore a sua saúde e alcance os seus objetivos com um treino específico, tendo em conta a sua individualidade, capacidades e limitações, com toda a qualidade e segurança."
-            frase.innerHTML = "<b>«Trabalho com afinco para poder deixar A Clínica impecável para receber os nossos pacientes.»</b>";
+            frase.innerHTML = "<b>«Ajudo-te a alcançar os teus objectivos em termos físicos, um treino de cada vez!»</b>";
             profile.src = "../img/team/team-14.jpg";
 
             // Rolar para o topo suavemente
