--- a/header.html
+++ b/header.html
@@ -509,7 +509,7 @@
                             </ul>
                         </li>
                         <a href="#" class="primary-btn" style="
-                                                                                                right: 0;
+                                                                                                right: 15px;
                                                                                                 position: absolute; margin-top: 0.4rem;
                                                                                             "> <i
                                 class="fa fa-lock"></i> Área Reservada</a>
