--- a/pages/enfermagem.html
+++ b/pages/enfermagem.html
@@ -161,15 +161,19 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="Consulta" class="mb-2 subtitle fw-bolder">Enfermagem
+                                        <h2 id="Consulta" class="mb-4 subtitle fw-bolder">Enfermagem
                                         </h2>
-                                        <h5 class="h4"><b id="subtitulo">O cuidado do seu recém-nascido na comodidade da
+                                        <h5 class="h4"><b id="subtitulo mb-4">O cuidado do seu recém-nascido na
+                                                comodidade da
                                                 sua casa.</b>
                                         </h5>
-                                        <p class="" id="texto">Enfermagem é uma profissão chave nos cuidados de saúde,
-                                            especialmente na área materno-infantil. <i>N’A Clínica</i>
-                                            proporcionamos cuidados de Enfermagem de excelência aos nossos pacientes e
-                                            às suas famílias. </p>
+                                        <p class="" id="texto">Quando nasce um bebé, nasce uma nova família. No
+                                            pós-parto imediato o quer mãe quer recém-nascido necessitam cuidados
+                                            redobrados.
+                                            <i>N’A Clínica</i> sabemos que dar toda a atenção necessária à mãe e ao bebé
+                                            na comodidade da sua casa é uma vantagem
+                                            importante.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -240,7 +244,7 @@
                     </div>
                     <div class="col-lg-4 col-md-4 d-flex height-fit-content justify-content-end">
                         <div class="row">
-                            <div class="card shadow" style="background-image: url('../img/bg3.png');">
+                            <div class="card shadow" style="background-image: url('../img/bg0.png');">
                                 <div class="card-more">
                                     <p class="border-bottom text-white hyphens-auto">N’<i>A Clínica</i>
                                         estão disponíveis consultas de diferentes especialidades, tal como variados
@@ -249,7 +253,7 @@
                                         para descobrir os nossos serviços.</p>
                                     <div class="d-flex mt-2">
                                         <div class="col-lg-4 col-md-4">
-                                            <a href="domicilio.html">
+                                            <a href="apoio.html">
                                                 <div class="card-icon">
                                                     <img src="../img/icons/home.png" style="width: 104px;">
                                                 </div>
@@ -259,7 +263,7 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-4">
-                                            <a href="pediatria.html">
+                                            <a href="../consultas.html">
                                                 <div class="card-icon">
                                                     <img src="../img/icons/Pediatra .png" style="width: 104px;">
                                                 </div>
@@ -396,18 +400,17 @@
                                         </div>
                                     </div>
 
-                                    <p>crianças que tenham uma ferida que necessite desinfeção e colocação ou mudança de
+                                    <p>Pessoas que tenham uma ferida que necessite desinfeção e colocação ou mudança de
                                         penso.
                                     </p>
 
                                     <div class="section-title pt-4">
-                                        <h5 class=""><b>Procedimento cirúrgico:</b></h5>
+                                        <h5 class=""><b>Procedimento de enfermagem:</b></h5>
                                         <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                     </div>
                                     <ul class="list mb-4">
                                         <li><a><i class="fa fa-check-circle"></i> Desinfeção adequada de feridas e
-                                                aplicação
-                                                ou mudança de pen</a></li>
+                                                aplicação ou mudança de penso.</a></li>
                                     </ul>
                                 </div>
                                 <a href="../info.html" class="primary-btn">Marcar Consulta </a>
