--- a/consultas.html
+++ b/consultas.html
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- 
                 <div class="col-lg-6 col-md-6">
                     <div class="services__item d-flex align-items-center border shadow-sm">
                         <div class="services__item__icon">
@@ -217,7 +217,7 @@
                             </ul>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col-lg-6 col-md-6">
                     <div class="services__item d-flex align-items-center border shadow-sm">
