--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -141,26 +141,22 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="parto" class="mb-2 subtitle fw-bolder">Amamentação
+                                        <h2 id="parto" class="mb-4 subtitle fw-bolder">Amamentação
                                         </h2>
-                                        <h5 class="mb-2 "><b>O leite materno é o melhor alimento para o seu
+                                        <h5 class="mb-4"><b>O leite materno é o melhor alimento para o seu
                                                 bebé!</b></h5>
-                                        <p class="mb-2">
-                                            A amamentação é um ato natural. A grande maioria das mulheres
-                                            nasce com a
-                                            capacidade física de amamentar, o que não
-                                            implica que amamentar seja fácil. <br>
-                                            Há vários fatores que têm um papel fundamental na amamentação e que são
-                                            únicos em cada mãe. Dentro de muitos outros
-                                            salientamos a escolaridade materna, o contexto socio-económico, a situação
-                                            emocional materna, a paridade (se já teve ou
-                                            não bebés), a intenção genuína de amamentar, rede de apoio, a situação
-                                            familiar e o seu encorajamento (ou falta dele) em
-                                            relação à amamentação. </p>
-                                        <p class="">
-                                            Destacamos, contudo, a informação sobre a realidade da amamentação, como
-                                            fator em que nos debruçamos de forma muito
-                                            especial n’<i>A Clínica</i>. </p>
+                                        <p class="mb-4">
+                                            O leite materno é ouro líquido. É uma substância complexa, viva e em
+                                            constante mudança, adequando-se às características
+                                            de cada bebé no momento da mamada. Há tantos leites maternos quantos bebés
+                                            existem no mundo.
+                                            <br> <br>
+                                            N’ A Clínica compreendemos a maravilhosa função do leite materno mas também
+                                            entendemos que a amamentação nem sempre é um
+                                            mar de rosas. Vamos dar-lhe todo o apoio que necessita para tornar a jornada
+                                            da amamentação o mais simples e prazerosa
+                                            possível.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -361,7 +357,7 @@
                                         serviços.</p>
                                     <div class="d-flex mt-2">
                                         <div class="col-lg-4 col-md-4">
-                                            <a href="domicilio.html">
+                                            <a href="apoio.html">
                                                 <div class="card-icon">
                                                     <img src="../img/icons/home.png" style="width: 104px;">
                                                 </div>
