--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -27,6 +27,11 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css">
 
     <style>
+        .services__details__content {
+            background-image: none !important;
+            background-color: #cfdbab !important;
+        }
+
         b {
             color: #d6a294;
             font-weight: 400;
@@ -133,9 +138,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold mb-2 ">
+                                        <h2 id="title" class="subtitle fw-bold mb-4 ">
                                         </h2>
-                                        <h5 class="mb-2 "><b>Um hábito nutricional saudável é um presente que
+                                        <h5 class="mb-4 "><b>Um hábito nutricional saudável é um presente que
                                                 fica para a vida!</b></h5>
                                         <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o
                                             nascimento através de hábitos salutares.
@@ -156,7 +161,7 @@
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
-                                    <h5 class="mb-2 "><b>Um hábito nutricional saudável é um presente que
+                                    <h5 class="mb-4"><b>Um hábito nutricional saudável é um presente que
                                             fica para a vida!</b></h5>
                                     <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o
                                         nascimento através de hábitos salutares.
@@ -303,7 +308,7 @@
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                 </div>
                                 <ul class="list">
-                                    <li><a><i class="fa fa-check-circle"></i> Treeducação alimentar do paciente para que
+                                    <li><a><i class="fa fa-check-circle"></i> Reeducação alimentar do paciente para que
                                             possa atingir os objetivos propostos, sejam eles de perda de massa gorda,
                                             ganho de massa magra, melhoria da condição de saúde em geral, melhoria de
                                             quadros de patologia e doença, etc.</a></li>
@@ -687,6 +692,7 @@
         }
         function show() {
             header.classList.remove("d-none");
+            header.classList.add('displayidr');
             ADiv.style.display = 'none';  // Esconde a div Cirurgia
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'none'; // Exibe a div pós-parto
