--- a/pages/viajante.html
+++ b/pages/viajante.html
@@ -117,9 +117,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 class="subtitle fw-bolder">Medicina do Viajante
+                                        <h2 class="subtitle fw-bolder mb-4">Medicina do Viajante
                                         </h2>
-                                        <h5 class="mb-2 "><b>Viajar em família é um dos prazeres da
+                                        <h5 class="mb-4 "><b>Viajar em família é um dos prazeres da
                                                 vida!</b></h5>
                                         <p class="mb-4"> <i>N’A Clínica</i> sabemos que viajar é uma das
                                             necessidades
@@ -145,9 +145,9 @@
                                                     destino
                                                     em relação a doenças e à sua prevenção, cuidados gerais e de
                                                     Nutrição.</a></li>
-                                            <li><a><i class="fa fa-check-circle"></i> Técnicas que se incluem num
-                                                    determinado
-                                                    procedimento cirúrgico.</a></li>
+                                            <li><a><i class="fa fa-check-circle"></i> Vacinação extra requerida para
+                                                    viajar e adaptação do Plano de Vacinação individual de cada membro
+                                                    da família.</a></li>
                                         </ul>
                                         <div class="section-title mb-2">
                                             <h4 class=" mb-2 mt-4"><b>! Informação importante !</b></h3>
