--- a/team.html
+++ b/team.html
@@ -224,7 +224,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container">
+                    <!-- <div class="container">
                         <div class="row text-center mb-2">
                             <div class="col-lg-12">
                                 <div class="section-title">
@@ -232,7 +232,6 @@
                                             src="../img/icons/contabilidade.png" class="mr-2" style="width: 2rem;"
                                             alt="">Departamento Financeiro
                                     </h2>
-                                    <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                 </div>
                             </div>
                         </div>
@@ -251,7 +250,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="container">
                         <div class="row text-center mb-2">
                             <div class="col-lg-12">
