--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -141,9 +141,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="parto" class="mb-4 subtitle fw-bolder">Amamentação
+                                        <h2 id="parto" class="mb-2 subtitle fw-bolder">Amamentação
                                         </h2>
-                                        <h5 class="mb-4"><b>O leite materno é o melhor alimento para o seu
+                                        <h5 class="mb-5"><b>O leite materno é o melhor alimento para o seu
                                                 bebé!</b></h5>
                                         <p class="mb-4">
                                             O leite materno é ouro líquido. É uma substância complexa, viva e em
@@ -165,6 +165,7 @@
 
                 </div>
             </div>
+        </div>
     </section>
     <!-- Blog Details Section End -->
 
