--- a/pages/enfermagem.html
+++ b/pages/enfermagem.html
@@ -161,9 +161,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="Consulta" class="mb-4 subtitle fw-bolder">Enfermagem
+                                        <h2 id="Consulta" class="mb-2 subtitle fw-bolder">Enfermagem
                                         </h2>
-                                        <h5 class="h4"><b id="subtitulo mb-4">O cuidado do seu recém-nascido na
+                                        <h5 class="h4 mb-5"><b id="subtitulo">O cuidado do seu recém-nascido na
                                                 comodidade da
                                                 sua casa.</b>
                                         </h5>
@@ -182,6 +182,7 @@
 
                 </div>
             </div>
+        </div>
     </section>
     <!-- Blog Details Section End -->
 
@@ -493,6 +494,7 @@
             suturaDiv.style.display = 'none';
             subtitulo.textContent = "O cuidado do seu recém-nascido na comodidade da sua casa.";
             consultaText.textContent = "Apoio domiciliário no pós-parto";
+            img.style.backgroundImage = "url('../img/blog/details/APOIO-DOM.jpg')"; // Atualiza o texto para "Cirurgia"
             CirurgiaBtn.classList.add("active");
             anelBtn.classList.remove("active");
             suturaBtn.classList.remove("active");
