--- a/pages/header.html
+++ b/pages/header.html
@@ -313,7 +313,7 @@
                                     <li>
                                         <span><img src="../img/icons/pediatria-alt.png" alt="">Pediatria</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="pediatria.html#D">Consulta de sono infantil</a></li>
+                                            <!-- <li><a href="pediatria.html#D">Consulta de sono infantil</a></li> -->
                                             <li><a href="pediatria.html#C">Criança doente</a></li>
                                             <li><a href="pediatria.html#E">Introdução alimentar</a></li>
                                             <li><a href="pediatria.html#A">Pré-natal</a></li>
