--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -125,22 +125,17 @@
                     </div>
                 </div>
             </div>
-    </section>
-    <!-- Blog Details Section End -->
-
-    <section class="services  set-bg">
-        <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-12">
-                    <div class="ml-4 mr-4 mb-4">
+                    <div class="ml-4 mr-4">
                         <div class="blog__details__text__item">
                             <!-- Título da Seção -->
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 id="title" class="subtitle fw-bold mb-4 ">
+                                        <h2 id="title" class="subtitle fw-bold mb-2">
                                         </h2>
-                                        <h5 class="mb-4 "><b>Um hábito nutricional saudável é um presente que
+                                        <h5 class="mb-5"><b>Um hábito nutricional saudável é um presente que
                                                 fica para a vida!</b></h5>
                                         <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o
                                             nascimento através de hábitos salutares.
@@ -155,6 +150,12 @@
 
                 </div>
             </div>
+        </div>
+    </section>
+    <!-- Blog Details Section End -->
+
+    <section class="services  set-bg">
+        <div class="container">
             <div id="header">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
@@ -266,7 +267,7 @@
                                         </a>
                                     </div>
                                     <div class="col-lg-6 col-md-6">
-                                        <a class="d-grid text-center justify-content-center" href="nutricao.html">
+                                        <a class="d-grid text-center justify-content-center" href="nutricao.html#A">
                                             <div class="card-icon">
                                                 <img src="../img/icons/Nutrição-white.png" style="width: 75px;">
 
@@ -287,42 +288,88 @@
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
                             <div class="blog__details__text__item">
-                                <!-- Título da Seção -->
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="section-title">
-                                            <h5 class=""><b>Esta consulta destina-se a:</b></h5>
-                                            <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
-                                        </div>
+                                <div class="section-title">
+                                    <h5 class="mb-4"><b>Um hábito nutricional saudável é um presente que
+                                            fica para a vida!</b></h5>
+                                    <p><i>N´A Clínica</i> ressaltamos a evidência de que a saúde se forja desde o
+                                        nascimento através de hábitos salutares.
+                                        Cuidar da nossa alimentação é fundamental para vivermos uma vida longa e
+                                        saudável.
+                                    </p>
+
+                                    <div class="section-title pt-4">
+                                        <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
+                                        <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                     </div>
+                                    <ul class="list">
+                                        <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Anamnese e Avaliação
+                                                    clínica</b></span>:
+                                            </a>
+                                            <ul>
+                                                <li>
+                                                    - Registo do historial clínico familiar e do paciente, bem como o
+                                                    seu
+                                                    estilo de vida
+                                                    praticado.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Avaliação
+                                                    bioquímica</b></span>: </a>
+                                            <ul>
+                                                <li>
+                                                    - Registo
+                                                    e avaliação de exames laboratoriais.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="mb-2"><a><i class="fa fa-check-circle"></i>
+                                                <b>Antropometria</b></span>:</a>
+                                            <ul>
+                                                <li>
+                                                    - Registo de
+                                                    peso, altura, circunferências, dobras e composição corporal por
+                                                    biometria.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Avaliação
+                                                    dietética</b></span>:</a>
+                                            <ul>
+                                                <li>
+                                                    - Registo
+                                                    da rotina alimentar.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Observações,
+                                                    diagnóstico e
+                                                    aconselhamento</b></span>:</a>
+                                            <ul>
+                                                <li>
+                                                    - Análise do quadro geral do
+                                                    paciente, determinar objetivos, explicação de conceitos de nutrição
+                                                    e apresentação dos métodos e rotinas a implementar.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="mb-2"><a><i class="fa fa-check-circle"></i> <b>Pós
+                                                    consulta</b></span>:
+                                            </a>
+                                            <ul>
+                                                <li>
+                                                    - Elaboração do
+                                                    plano alimentar baseado nas necessidades energéticas e nutricionais
+                                                    do paciente.
+                                                    Debater limitações apresentadas pelo paciente na implementação do
+                                                    plano na sua rotina e considerar os ajustes necessário para atingir
+                                                    os objetivos com sucesso.
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </div>
-
-                                <p><span class="underline">Adultos</span> que necessitem orientação com o seu regime
-                                    alimentar ou sofram doenças que
-                                    requerem um acompanhamento
-                                    especializado em Nutrição.
-                                </p>
-
-                                <div class="section-title pt-4">
-                                    <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
-                                    <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
-                                </div>
-                                <ul class="list">
-                                    <li><a><i class="fa fa-check-circle"></i> Reeducação alimentar do paciente para que
-                                            possa atingir os objetivos propostos, sejam eles de perda de massa gorda,
-                                            ganho de massa magra, melhoria da condição de saúde em geral, melhoria de
-                                            quadros de patologia e doença, etc.</a></li>
-
-                                </ul>
-                                <div class="section-title mt-4">
-                                    <h4 class=" mb-2 h5"><b>! Informação importante !</b></h4>
-                                </div>
-                                <p> Nesta consulta recolhemos informação clínica pertinente de
-                                    cada paciente e executamos um exame físico detalhado do
-                                    mesmo.
-                                </p>
                             </div>
-                            <a href="../info.html" class="primary-btn">Marcar Consulta </a>
                         </div>
                     </div>
                 </div>
@@ -347,7 +394,7 @@
                                         </a>
                                     </div>
                                     <div class="col-lg-6 col-md-6">
-                                        <a class="d-grid text-center justify-content-center" href="nutricao.html">
+                                        <a class="d-grid text-center justify-content-center" href="nutricao.html#A">
                                             <div class="card-icon">
                                                 <img src="../img/icons/Nutrição-white.png" style="width: 75px;">
 
@@ -427,7 +474,7 @@
                                         </a>
                                     </div>
                                     <div class="col-lg-6 col-md-6">
-                                        <a class="d-grid text-center justify-content-center" href="nutricao.html">
+                                        <a class="d-grid text-center justify-content-center" href="nutricao.html#A">
                                             <div class="card-icon">
                                                 <img src="../img/icons/Nutrição-white.png" style="width: 75px;">
 
@@ -504,7 +551,7 @@
                                         </a>
                                     </div>
                                     <div class="col-lg-6 col-md-6">
-                                        <a class="d-grid text-center justify-content-center" href="nutricao.html">
+                                        <a class="d-grid text-center justify-content-center" href="nutricao.html#A">
                                             <div class="card-icon">
                                                 <img src="../img/icons/Nutrição-white.png" style="width: 75px;">
 
@@ -584,7 +631,7 @@
                                         </a>
                                     </div>
                                     <div class="col-lg-6 col-md-6">
-                                        <a class="d-grid text-center justify-content-center" href="nutricao.html">
+                                        <a class="d-grid text-center justify-content-center" href="nutricao.html#A">
                                             <div class="card-icon">
                                                 <img src="../img/icons/Nutrição-white.png" style="width: 75px;">
 
