--- a/pages/pediatria.html
+++ b/pages/pediatria.html
@@ -116,8 +116,8 @@
                                     class="fa fa-user"></i>
                                 presencial
                             </span>
-                            <span id="hiden" class="h6"> <i class="fa fa-clock-o"></i> Duração: 60min | <i id="mn"
-                                    class="fa fa-user"> presencial</i>
+                            <span id="hiden" class="h6"> <i class="fa fa-clock-o"></i> Duração: 60min | <span
+                                    id="mn"></span> <i class="fa fa-user"> Presencial</i>
                                 |
                                 <i class="fa fa-desktop"></i> Online
                             </span>
@@ -666,12 +666,13 @@
                                         </div>
                                     </div>
 
-                                    <p><span class="underline">Bebés entre os 4 e os 6 meses</span>que ainda não
+                                    <p><span class="underline">Bebés entre os 4 e os 6 meses</span> que ainda não
                                         iniciaram a
                                         introdução alimentar.
                                         Pretendemos descomplicar a introdução alimentar, facilitando assim a vida
                                         familiar.
-                                        Habitualmente é realizada em regime de online e tem uma duração de entre 60 a 90
+                                        Pode ser realizada tanto em regime presencial como em online e tem uma duração
+                                        de entre 60 a 90
                                         min, dependendo das dúvidas que surjam.
                                     </p>
                                     <div class="section-title pt-4">
@@ -798,6 +799,7 @@
             BDiv.style.display = 'none';
             CDiv.style.display = 'none';
             DDiv.style.display = 'none';
+            doutora.textContent = "Dra Inês Claudino ou Dra Patricia Pérez";
             EDiv.style.display = 'none';
             showe.style.display = 'none';
             title.textContent = "Consulta de Pediatria Pré-Natal";
@@ -814,7 +816,7 @@
             DDiv.style.display = 'none';
             EDiv.style.display = 'none';
             showe.style.display = 'none';
-            doutora.textContent = "Dra Inês Claudino";
+            doutora.textContent = "Inês Claudino ou Dra Patricia Pérez";
             title.textContent = "Consulta de Pediatria de Rotina";
             subtitulo.textContent = "Uma Pediatra não é uma médica como as outras, é alguém que acompanha toda a família!";
             img.src = "../img/blog/details/blog-hero10.jpg";
