--- a/pages/terapia.html
+++ b/pages/terapia.html
@@ -568,7 +568,7 @@
                                     permitindo:
 
                                 </p>
-                                <ul class="list mb-4">
+                                <ul class="list mb-4 mt-4">
                                     <li><a><i class="fa fa-check-circle"></i> A estimulação sensorial e/ou a promoção do
                                             relaxamento e alívio do stress;</a></li>
                                     <li><a><i class="fa fa-check-circle"></i> A estimulação/desenvolvimento de
