--- a/pages/teste.html
+++ b/pages/teste.html
@@ -130,10 +130,7 @@
                                     <div class="section-title">
                                         <h2 id="title" class="subtitle fw-bold mb-2">
                                         </h2>
-                                        <h5><b id="subtitulo">A comodidade de ter um teste
-                                                diagnóstico em sua casa
-                                                é
-                                                impagável.</b></h5>
+                                        <h5><b id="subtitulo"></b></h5>
                                     </div>
                                 </div>
                             </div>
@@ -196,10 +193,10 @@
                                 </p>
 
                                 <div class="section-title pt-2">
-                                    <h5 class=""><b>Doenças se rastreiam com o teste do pezinho</b></h5>
+                                    <h5 class="mb-4"><b>Doenças se rastreiam com o teste do pezinho</b></h5>
                                     <p>Atualmente rastreiam-se as seguintes doenças:</p>
                                 </div>
-                                <ul class="list">
+                                <ul class="list mt-2">
                                     <li><a><i class="fa fa-check-circle"></i> Tipo de acompanhamento pediátrico
                                             praticado.</a></li>
                                     <li><a><i class="fa fa-check-circle"></i> Hipotiroidismo Congénito</a></li>
@@ -507,7 +504,7 @@
             BDiv.classList.add('displayidr');
             DDiv.style.display = 'none';
             EDiv.style.display = 'none';
-            title.textContent = "Teste rápido de amigdalite bacterianas";
+            title.textContent = "Teste rápido de amigdalite bacteriana";
             img.src = "../img/blog/details/amigdalite.jpg";
             updateActiveButton(BBtn);
             scrollToTop();
